--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
