Setup PM2 to run both our backend and frontend.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "Our-Shelves",
+  "private": true,
   "scripts": {
-    "dev": "concurrently -k -n API,WEB -c blue,green \"npm:dev:api\" \"npm:dev:web\"",
+    "dev": "pm2 start ecosystem.config.js && pm2 logs",
     "dev:api": "npm --prefix server run dev",
-    "dev:web": "npm --prefix client run dev"
+    "dev:web": "npm --prefix client run dev",
+    "stop": "pm2 stop all",
+    "restart": "pm2 restart all",
+    "delete": "pm2 delete all"
   },
-  "devDependencies": {
-    "concurrently": "^9.2.1"
+  "dependencies": {
+    "pm2": "^6.0.13"
   }
 }
