--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "Our-Shelves",
   "private": true,
   "scripts": {
-    "dev": "pm2 start ecosystem.config.js && pm2 logs",
-    "dev:api": "npm --prefix server run dev",
     "dev:web": "npm --prefix client run dev",
-    "stop": "pm2 stop all",
-    "restart": "pm2 restart all",
-    "delete": "pm2 delete all"
+    "dev:api": "npm --prefix server run dev",
+    "dev": "npm-run-all --parallel dev:web dev:api"
   },
-  "dependencies": {
-    "pm2": "^6.0.13"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
