--- a/server/example.env
+++ b/server/example.env
@@ -1,8 +1,7 @@
-SERVER_PORT= 
-NODE_ENV=
+SERVER_PORT=3000
 
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+DB_HOST=localhost 
+DB_PORT=3306
+DB_NAME=ourshelves
+DB_USER=DevelopmentUserOrDeploymentUser
+DB_PASSWORD=UserPassword
